--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,16 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
+# Ballerina generates this directory during the compilation of a package.
+# It contains compiler-generated artifacts and the final executable if this is an application package.
+target/
+*/target/
+# Ballerina maintains the compiler-generated source code here.
+# Remove this if you want to commit generated sources.
+generated/
+
+# Contains configuration values used during development time.
+# See https://ballerina.io/learn/provide-values-to-configurable-variables/ for more details.
+Config.toml
+*/Config.toml
