--- a/mock-bank-backend/package.json
+++ b/mock-bank-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Mock banking backend API for AI banking assistant",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
